--- a/3d.html
+++ b/3d.html
@@ -62,9 +62,8 @@
 
 <!--<body style="background: linear-gradient(to left, #00AAFF, #00FF6c)";>-->
 
-
 <!-- Navbar -->
-<nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
+<nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
@@ -74,7 +73,7 @@
         </a>
 
         <a class="navbar-brand me-2" href="home.html">
-            PHOTONs
+            <h4>photon labs</h4>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -104,8 +103,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle bg-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">code</a>
+                    <a class="nav-link dropdown-toggle bg-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Development Projects</a>
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" href="">The Photon Foundation [comeback soon]</a>
+                        <a class="dropdown-item" href="">PhotonMag [comeback soon]</a>
+                        <a class="dropdown-item" href="">Help-Tank [comeback soon]</a>
+                        <a class="dropdown-item" href="">CrushedMonkey [comeback soon]</a>
                         <a class="dropdown-item" href="calc.html">My Calculator</a>
                         <a class="dropdown-item" href="coffee.html">Coffee Project(my first paired programming project)</a>
                         <a class="dropdown-item" href="foods.html">Favorite Foods Map</a>
@@ -118,14 +121,15 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link" href="3d.html">3d creations</a>
+                    <a class="nav-link" href="3d.html">Game Design</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="flickarchive.html">photographs</a>
+                    <a class="nav-link" href="flickarchive.html">Photographic Archive</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">about me</a>
+                    <a class="nav-link" href="aboutme.html">About</a>
                 </li>
+
             </ul>
 
 
@@ -158,7 +162,7 @@
                     <!--                        </form>-->
                     <!--                    </li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+                        <a class="nav-link" href="blog.html" style="color:#00b1ae">Blog</a>
                     </li>
                     <li>
                         <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
