--- a/3dScansArtpace.html
+++ b/3dScansArtpace.html
@@ -256,7 +256,7 @@
 
 <script src="resources/threejs/r105/js/loaders/LoaderSupport.js"></script>
 <script src="resources/threejs/r105/js/loaders/OBJLoader2.js"></script>
-<script src="js/GLTFLoader.js"></script>
+<script src="js\GLTFLoader.js"></script>
 <script>
     let scene, camera, renderer;
 
