--- a/3d.html
+++ b/3d.html
@@ -222,9 +222,12 @@
         <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
 
 
-
+            https://imgur.com/xGjGdWB
 
 <!--            <h4 style="align-items: left; color:#009694" text="Fixing the MoneyCat">Fixing the Japenses Maneki-neko (MoneyCat)</h4>-->
+            <img src="https://i.imgur.com/xGjGdWB.jpg" style="width: 95vh; padding-bottom: 2%; color:#484848">
+            <p style="align-items: center">3070</p>
+
             <img src="img/bridge.gif" style="width: 95vh; padding-bottom: 2%; color:#484848">
             <p style="align-items: center">A bridge asset</p>
 
