--- a/3d.html
+++ b/3d.html
@@ -225,7 +225,7 @@
             https://imgur.com/xGjGdWB
 
 <!--            <h4 style="align-items: left; color:#009694" text="Fixing the MoneyCat">Fixing the Japenses Maneki-neko (MoneyCat)</h4>-->
-            <img src="https://i.imgur.com/xGjGdWB.jpg" style="width: 95vh; padding-bottom: 2%; color:#484848">
+            <img src="https://live.staticflickr.com/65535/52263573341_1cfeb9277c_k.jpg" style="width: 95vh; padding-bottom: 2%; color:#484848">
             <p style="align-items: center">3070</p>
 
             <img src="img/bridge.gif" style="width: 95vh; padding-bottom: 2%; color:#484848">
