--- a/calc.html
+++ b/calc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Hi Github -->
+<!-- Hi Github, Why shouldn't this count as a commit :D -->
 <head>
     <meta charset="UTF-8">
     <title>Photon Life</title>
