--- a/calc.html
+++ b/calc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Hi Github, Why shouldn't this count as a commit :D -->
+<!-- work has been tough but i will update some of these projects soon -->
 <head>
     <meta charset="UTF-8">
     <title>Photon Life</title>
