--- a/3d.html
+++ b/3d.html
@@ -59,7 +59,7 @@
 </head>
 
 
-
+<!--- NavBar  -->
 <!--<body style="background: linear-gradient(to left, #00AAFF, #00FF6c)";>-->
 <div id="navbar"></div>
 <script>
@@ -69,7 +69,7 @@
       document.getElementById("navbar").innerHTML = data;
     });
 </script>
-
+<!--- End of NavBar  -->
 
 
 
