--- a/navbar.html
+++ b/navbar.html
@@ -42,10 +42,10 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle bg-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Development Projects</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="">The Photon Foundation [comeback soon]</a>
+                      <!--  <a class="dropdown-item" href="">The Photon Foundation [comeback soon]</a>
                         <a class="dropdown-item" href="">PhotonMag [comeback soon]</a>
                         <a class="dropdown-item" href="">Help-Tank [comeback soon]</a>
-                        <a class="dropdown-item" href="">CrushedMonkey [comeback soon]</a>
+                        <a class="dropdown-item" href="">CrushedMonkey [comeback soon]</a> -->
                         <a class="dropdown-item" href="calc.html">My Calculator</a>
                         <a class="dropdown-item" href="coffee.html">Coffee Project(my first paired programming project)</a>
                         <a class="dropdown-item" href="foods.html">Favorite Foods Map</a>
