--- a/foods.html
+++ b/foods.html
@@ -81,17 +81,17 @@
 <body>
 
     
-    <!-- NavBar -->
+<!-- NavBar -->
 <div id="navbar"></div>
 <script>
-  fetch("/navbar.html")
+  fetch("navbar.html")
     .then(response => response.text())
     .then(data => {
       document.getElementById("navbar").innerHTML = data;
     });
 </script>
-
 <!-- End of NavBar -->
+
 
 
 <!-- Media panel -->
