--- a/home.html
+++ b/home.html
@@ -64,17 +64,17 @@
 
 
 
-    <!-- NavBar -->
-<div id="navbar"></div>
 <script>
-  fetch("/navbar.html")
-    .then(response => response.text())
+  fetch("navbar.html")
+    .then(response => {
+      if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+      return response.text();
+    })
     .then(data => {
       document.getElementById("navbar").innerHTML = data;
-    });
+    })
+    .catch(err => console.error("Navbar fetch error:", err));
 </script>
-
-<!-- End of NavBar -->
 
 
 
@@ -175,9 +175,9 @@
 
     .btn {
         background-color: white;
-        border: 1px solid @gray-light;
-    //border-radius: 1rem;
-        color: @gray-dark;
+        border: 1px solid gray-light;
+        border-radius: 1rem;
+        color: gray-dark;
         padding: 0.5rem;
         text-transform: lowercase;
     }
@@ -435,7 +435,7 @@
 <main class="container">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
-            <h1 class="display-4 fst-italic">photon labs</h1>
+            <h1 class="display-4 fst-italic">PhotonLabs</h1>
             <p class="lead my-3">a computer science journal </p>
 <!--            <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>-->
         </div>
