--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
         </a>
 
         <a class="navbar-brand me-2" href="home.html">
-            <h4>photon labs</h4>
+            <h4>PhotonLabs</h4>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -134,36 +134,10 @@
                 </li>
 
             </ul>
-
-
             <!-- Left links -->
 
             <div class="d-flex align-items-center">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="post">post</a>-->
-<!--                    </li>-->
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
-                    <!--                    </li>-->
-
-                    <!--                    <li class="nav-item">-->
-                    <!--&lt;!&ndash;                         <a&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        class="btn btn-dark px-3 material-icons-outlined"&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        href="myprofile"&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        role="button">&ndash;&gt;-->
-
-                    <!--&lt;!&ndash;                             <i class="material-icons" style="font-size:14px;">account_circle</i>&ndash;&gt;-->
-                    <!--&lt;!&ndash;                         </a>&ndash;&gt;-->
-                    <!--                    </li>-->
-
-                    <!-- More links here... -->
-                    <!-- More links here... -->
-<!--                    <li class="nav-item">-->
-<!--                        <form th:action="@{/logout}" th:method="post">-->
-<!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
-<!--                        </form>-->
-<!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="blog.html" style="color:#00b1ae">Blog</a>
                     </li>
